Added PowerBI dashboard

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
         <div class="col-lg-3 col-md-6 col-sm-12" style="background-color: yellow;">texto2</div>
     </div>
 
+    <div>
+        <iframe title="proyectoJaviAna" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYTk2ZjI1ZWUtOTkzMS00YjkxLWI1YTMtMGQ4ZTljMzg3MGFjIiwidCI6IjQ0ZWY4ZjgzLTNjM2YtNDQ0Yy1iNzM4LTk3NTY3N2MwOGYxOCIsImMiOjl9" frameborder="0" allowFullScreen="true"></iframe>
+    </div>
+
     <br>
     <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
