--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
         <div class="col-lg-3 col-md-6 col-sm-12" style="background-color: blue;">texto1</div>
         <div class="col-lg-3 col-md-6 col-sm-12" style="background-color: yellow;">texto2</div>
     </div>
-
-    <div>
-        <iframe title="proyectoJaviAna" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiYTk2ZjI1ZWUtOTkzMS00YjkxLWI1YTMtMGQ4ZTljMzg3MGFjIiwidCI6IjQ0ZWY4ZjgzLTNjM2YtNDQ0Yy1iNzM4LTk3NTY3N2MwOGYxOCIsImMiOjl9" frameborder="0" allowFullScreen="true"></iframe>
+    <div class="row">
+        <div class="col-lg-12">
+            <iframe width="760px" height="500px" src="https://sway.office.com/s/UKX2sqrQXnAD2RLn/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>
+        </div>
     </div>
-
+    <!--<iframe width="760px" height="500px" src="https://sway.office.com/s/UKX2sqrQXnAD2RLn/embed" frameborder="0" marginheight="0" marginwidth="0" max-width="100%" sandbox="allow-forms allow-modals allow-orientation-lock allow-popups allow-same-origin allow-scripts" scrolling="no" style="border: none; max-width: 100%; max-height: 100vh" allowfullscreen mozallowfullscreen msallowfullscreen webkitallowfullscreen></iframe>-->
     <br>
     <div class="dropdown">
         <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
